---
source: spade-tests/src/typeinference.rs
---
fn test() {
    let x: int<16> = 10u32;
}


error: Expected type int<16>, got uint<32>
  ┌─ testinput:2:22
  │
2 │     let x: int<16> = 10u32;
  │            -------   ^^^^^ Expected int<16>
  │            │          
  │            Type int<16> inferred here
  │
  = note: Expected: int<16>
               Got: uint<32>


